// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`refractor elements SelectorElement given type field of Expression Type Object shape should refract to ExpressionTypeElement 1`] = `
(SelectorElement
  (MemberElement
    (StringElement)
    (StringElement))
  (MemberElement
    (StringElement)
    (StringElement))
  (MemberElement
    (StringElement)
    (ExpressionTypeElement
      (MemberElement
        (StringElement)
        (StringElement))
      (MemberElement
        (StringElement)
        (StringElement)))))
`;

exports[`refractor elements SelectorElement should refract to semantic ApiDOM tree 1`] = `
(SelectorElement
  (MemberElement
    (StringElement)
    (StringElement))
  (MemberElement
    (StringElement)
    (StringElement))
  (MemberElement
    (StringElement)
    (StringElement)))
`;
